--- a/tasks/6.md
+++ b/tasks/6.md
@@ -2,20 +2,13 @@
 
 ## Zadanie 6
 
-1. Krok pierwszy
-
-Utwórz funkcję konstrukcyjną `Person`, która przyjmuje `name` i `age`, a następnie:
+1. Utwórz funkcję konstrukcyjną `Person`, która przyjmuje `name` i `age`, a następnie:
 - zapisuje je jako właściwości obiektu,
 - dodaj metodę `introduce` wewnątrz konstruktora, która zwróci tekst:
 
 "Hi, my name is {name}, I’m {age} years old."
 
-2. Krok drugi
+2. przenieś metodę `introduce` na prototyp `Person`, aby nie była tworzona dla każdego obiektu osobno
 
-- przenieś metodę `introduce` na prototyp `Person`, aby nie była tworzona dla każdego obiektu osobno
-
-3. Krok trzeci
-
-- stwórz obiekt `Student`, który dziedziczy po Person i dodatkowo przyjmuje `course` (kierunek studiów)
-- nadpisz metodę `introduce`, aby zwracała tekst:
+3. Stwórz obiekt `Student`, który dziedziczy po Person i dodatkowo przyjmuje `course` (kierunek studiów) i nadpisz metodę `introduce`, aby zwracała tekst:
 "Hi, my name is {name}, I’m {age} years old and I study {course}."
